# iot-identity-service

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  clippy.toml  rust-toolchain  rust-toolchain.toml
aziot/: Cargo.toml
aziot/aziot-check-common/: Cargo.toml
aziot/aziot-check-common/src/: lib.rs
aziot/aziot-common/: Cargo.toml
aziot/aziot-common/src/: lib.rs  set_log_level.rs  status.rs  system_logs.rs
aziot/src/: check.rs  check_list.rs  error.rs  init.rs  main.rs  system.rs
aziot/src/check/: check_list_cli.rs  mod.rs
aziot/src/check/checks/: mod.rs
aziot/src/internal/: common.rs  mod.rs
aziot/src/internal/check/: additional_info.rs  mod.rs  util.rs
aziot/test-files/init/: README.md
aziot/test-files/init/dps-symmetric-key/: identityd.toml  input.txt
aziot/test-files/init/dps-tpm/: identityd.toml
aziot/test-files/init/dps-x509/: identityd.toml  input.txt
aziot/test-files/init/dps-x509-pkcs11/: keyd.toml
aziot/test-files/init/dps-x509-pkcs11-est/: certd.toml  input.txt  keyd.toml
aziot/test-files/init/dps-x509-pkcs11-est-bootstrap/: certd.toml  identityd.toml  keyd.toml
aziot/test-files/init/dps-x509-pkcs11-localca/: certd.toml  input.txt  keyd.toml
aziot/test-files/init/manual-connection-string/: identityd.toml
aziot/test-files/init/manual-symmetric-key/: identityd.toml
aziot/test-files/init/manual-x509-pkcs11/: identityd.toml  input.txt  keyd.toml
aziotctl/: Cargo.toml
aziotctl/.cargo/: config.toml
aziotctl/aziotctl-check-common/: Cargo.toml
aziotctl/aziotctl-common/: Cargo.toml
aziotctl/aziotctl-common/src/: check_last_modified.rs  host_info.rs  lib.rs  reprovision.rs  restart.rs  set_log_level.rs  status.rs  stop.rs  system_logs.rs
aziotctl/aziotctl-common/src/config/: apply.rs  mod.rs  super_config.rs  wizard.rs
aziotctl/aziotctl-common/src/system/: mod.rs  restart.rs  set_log_level.rs  status.rs  stop.rs  system_logs.rs
aziotctl/aziotctl-common/test-files/: product_info.toml
aziotctl/aziotctl-common/test-files/apply/: README.md
aziotctl/aziotctl-common/test-files/wizard/: README.md
aziotctl/config/unix/: template.toml
aziotctl/src/: check.rs  check_list.rs  init.rs  main.rs  system.rs
aziotctl/src/config/: apply.rs  mod.rs  mp.rs  wizard.rs
aziotctl/src/internal/: common.rs
aziotctl/src/internal/check/: additional_info.rs  mod.rs
aziotctl/test-files/init/: README.md
aziotctl/test-files/init/dps-symmetric-key/: identityd.toml
aziotctl/test-files/init/dps-tpm/: identityd.toml  input.txt
aziotctl/test-files/init/dps-x509-pkcs11/: identityd.toml  input.txt  keyd.toml
aziotctl/test-files/init/dps-x509-pkcs11-est/: certd.toml  keyd.toml
aziotctl/test-files/init/dps-x509-pkcs11-est-bootstrap/: input.txt  keyd.toml
aziotctl/test-files/init/dps-x509-pkcs11-localca/: keyd.toml
aziotctl/test-files/init/manual-x509/: input.txt  (+1 more)
aziotd/: Cargo.toml
aziotd/src/: config.rs  error.rs  logging.rs  main.rs
cert/aziot-cert-client-async/: Cargo.toml
cert/aziot-cert-client-async/src/: lib.rs
cert/aziot-certd/: Cargo.toml  aziot-certd.service  aziot-certd.service.in  aziot-certd.socket  aziot-certd.socket.in
cert/aziot-certd-config/: Cargo.toml
cert/aziot-certd-config/src/: lib.rs  util.rs
cert/aziot-certd/openapi/: 2020-09-01.yaml
cert/aziot-certd/src/: config.rs  dps.rs  error.rs  est.rs  lib.rs  main.rs  renewal.rs
cert/cert-renewal/: Cargo.toml
cert/cert-renewal/src/: cert_interface.rs  credential.rs  engine.rs  error.rs  lib.rs  lifetime.rs  policy.rs  renewal.rs  time.rs
common/aziot-common/: Cargo.toml
common/aziot-common/src/: error.rs  lib.rs  settings.rs
common/aziot-common/test/: bad_config.toml  good_dps_config.toml  good_sas_config.toml
config-common/: Cargo.toml
config-common/src/: error.rs  lib.rs  watcher.rs
cs-client-async/: Cargo.toml
cs-client-async/src/: lib.rs
csd/: Cargo.toml
csd/src/: error.rs  lib.rs  main.rs
csd/src/http/: create.rs  get_or_delete.rs  import.rs  mod.rs
http-common/: Cargo.toml
http-common/src/: backoff.rs  connector.rs  dynrange.rs  lib.rs  proxy.rs  request.rs  server.rs  uid.rs
identity/aziot-cloud-client-async/: Cargo.toml
identity/aziot-cloud-client-async-common/: Cargo.toml
identity/aziot-cloud-client-async-common/src/: lib.rs
identity/aziot-cloud-client-async/src/: connector.rs  lib.rs  request.rs
identity/aziot-dps-client-async/: Cargo.toml
identity/aziot-dps-client-async/src/: lib.rs  model.rs
identity/aziot-hub-client-async/: Cargo.toml
identity/aziot-hub-client-async/src/: lib.rs
identity/aziot-identity-client-async/: Cargo.toml
identity/aziot-identity-client-async/src/: lib.rs
identity/aziot-identity-common/: Cargo.toml
identity/aziot-identity-common-http/: Cargo.toml
identity/aziot-identity-common-http/src/: lib.rs
identity/aziot-identity-common/src/: lib.rs
identity/aziot-identityd-config/: Cargo.toml
identity/aziot-identityd-config/src/: check.rs  lib.rs
identity/aziot-identityd-config/test/: complex_payload.json  good_dps_config.toml  good_dps_config_with_complex_payload.toml  good_dps_config_with_simple_payload.toml  good_sas_config.toml  simple_payload.json
iotedged/: Cargo.toml  build.rs
iotedged/src/: certgen.rs  main.rs
iothsm-keygen/: Cargo.toml  cbindgen.prelude.h  cbindgen.toml  iothsm-keygen.h
iothsm-keygen/src/: key.rs  lib.rs
ks-client/: Cargo.toml
ks-client-async/: Cargo.toml
ks-client-async/src/: lib.rs
ks-client/src/: lib.rs
ksd/: Cargo.toml  build.rs
ksd/src/: error.rs  keygen.rs  lib.rs  main.rs
ksd/src/http/: create_key_if_not_exists.rs  create_key_pair_if_not_exists.rs  decrypt.rs  encrypt.rs  get_key_pair_public_parameter.rs  load_key_pair.rs  mod.rs  sign.rs
openssl-engine-ks/: Cargo.toml
openssl-engine-ks/src/: ec_key.rs  engine.rs  ex_data.rs  lib.rs  rsa.rs
openssl2/: Cargo.toml
openssl2/src/: extension.rs  lib.rs
test-common/: Cargo.toml
test-common/src/: credential.rs  lib.rs  tokio_openssl2.rs
test-common/src/client/: cert.rs  identity.rs  key.rs  mod.rs
(+558 files in other folders)
