[workspace]
members = [
	"cert/aziot-cert-client-async",
	"cert/aziot-cert-common",
	"cert/aziot-cert-common-http",
	"cert/aziot-certd",

	"common/aziot-common",

	"http-common",

	"identity/aziot-identityd",

	"iotedged",

	"key/aziot-key-client",
	"key/aziot-key-client-async",
	"key/aziot-key-common",
	"key/aziot-key-common-http",
	"key/aziot-keyd",
	"key/aziot-keys",

	"openssl2",
	"openssl-build",
	"openssl-sys2",

	"pkcs11/pkcs11",
	"pkcs11/pkcs11-openssl-engine",
	"pkcs11/pkcs11-sys",
	"pkcs11/pkcs11-test",
]


# Don't let panics from callbacks cross FFI boundary

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
