[workspace]
members = [
	"aziotctl",
	"aziotctl/aziotctl-common",

	"aziotd",

	"cert/aziot-cert-client-async",
	"cert/aziot-cert-common",
	"cert/aziot-cert-common-http",
	"cert/aziot-certd",
	"cert/cert-renewal",

	"config-common",

	"http-common",

	"identity/aziot-cloud-client-async",
	"identity/aziot-identity-client-async",
	"identity/aziot-identity-common",
	"identity/aziot-identity-common-http",
	"identity/aziot-identityd",
	"identity/mock-iot-server",

	"key/aziot-key-client",
	"key/aziot-key-client-async",
	"key/aziot-key-common",
	"key/aziot-key-common-http",
	"key/aziot-keyd",
	"key/aziot-key-openssl-engine",
	"key/aziot-key-openssl-engine-shared",
	"key/aziot-key-openssl-engine-shared-test",
	"key/aziot-keys",
	"key/aziot-keys-common",

	"mini-sntp",

	"openssl2",
	"openssl-build",
	"openssl-sys2",

	"pkcs11/pkcs11",
	"pkcs11/pkcs11-sys",

	"test-common",

	"tpm/aziot-tpm-client-async",
	"tpm/aziot-tpm-common-http",
	"tpm/aziot-tpm-common",
	"tpm/aziot-tpm-rs",
	"tpm/aziot-tpm-sys",
	"tpm/aziot-tpmd",
]


# Don't let panics from callbacks cross FFI boundary

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
