[package]
name = "aziot"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2018"


[dependencies]
anyhow = "1.0.34"
async-trait = "0.1.42"
backtrace = "0.3"
base64 = "0.12"
byte-unit = "4.0.9"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0.0"
derive_more = "0.99.11"
erased-serde = "0.3.12"
futures = "0.3"
nix = "0.18"
rustyline = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.59"
structopt = "0.3"
sysinfo = "0.15.3"
tokio = { version = "0.2", features = ["macros", "fs", "io-util"] }
toml = "0.5"
url = "2"

aziot-certd = { path = "../cert/aziot-certd" }
aziot-identityd = { path = "../identity/aziot-identityd" }
aziot-keyd = { path = "../key/aziot-keyd" }
aziot-keys-common = { path = "../key/aziot-keys-common" }
aziot-tpmd = { path = "../tpm/aziot-tpmd" }


[dev-dependencies]
bytes = "0.5"
