[package]
name = "aziot"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2018"


[dependencies]
backtrace = "0.3"
base64 = "0.12"
derive_more = "0.99.11"
nix = "0.18"
rustyline = "6"
structopt = "0.3"
toml = "0.5"
url = "2"

aziot-certd-config = { path = "../cert/aziot-certd-config" }
aziot-identityd-config = { path = "../identity/aziot-identityd-config" }
aziot-keyd-config = { path = "../key/aziot-keyd-config" }
aziot-keys-common = { path = "../key/aziot-keys-common" }
aziot-tpmd-config = { path = "../tpm/aziot-tpmd-config" }


[dev-dependencies]
bytes = "0.5"
