[package]
name = "aziot"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2018"


[dependencies]
anyhow = "1.0.34"
async-trait = "0.1.42"
base64 = "0.12"
byte-unit = "4.0.9"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0.0"
derive_more = "0.99.11"
erased-serde = "0.3.12"
hyper = "0.14"
hyper-openssl = "0.9"
nix = "0.18"
openssl = "0.10"
rustyline = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.59"
structopt = "0.3"
sysinfo = "0.15.3"
tokio = { version = "1.0", features = ["macros", "fs", "io-util", "rt-multi-thread"] }
toml = "0.5"
url = "2"

aziot-check-common = { path = "./aziot-check-common" }
aziot-certd-config = { path = "../cert/aziot-certd-config" }
aziot-identityd-config = { path = "../identity/aziot-identityd-config" }
aziot-keyd-config = { path = "../key/aziot-keyd-config" }
aziot-keys-common = { path = "../key/aziot-keys-common" }
aziot-tpmd-config = { path = "../tpm/aziot-tpmd-config" }
http-common = { path = "../http-common", features = ["tokio02"] }
mini-sntp = { path = "../mini-sntp" }

[dev-dependencies]
bytes = "0.5"
