[package]
name = "aziotctl"
version = "1.4.0"
authors = ["Azure IoT Edge Devs"]
edition = "2021"


[dependencies]
anyhow = "1.0.34"
async-recursion = "1"
async-trait = "0.1.42"
base64 = "0.13"
byte-unit = "4.0.9"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0.0"
erased-serde = "0.3.12"
foreign-types-shared = "0.1"
hyper = "0.14"
hyper-openssl = "0.9"
libc = "0.2"
nix = "0.24"
log = "0.4"
openssl = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.59"
structopt = "0.3"
sysinfo = "0.15.3"
tokio = { version = "1", features = ["macros", "fs", "io-util", "rt-multi-thread"] }
toml = "0.5"
url = "2"

aziot-cert-client-async = { path = "../cert/aziot-cert-client-async" }
aziot-cert-common-http = { path = "../cert/aziot-cert-common-http" }
aziot-certd-config = { path = "../cert/aziot-certd-config" }
aziot-identity-client-async = { path = "../identity/aziot-identity-client-async" }
aziot-identity-common-http = { path = "../identity/aziot-identity-common-http" }
aziot-identityd-config = { path = "../identity/aziot-identityd-config" }
aziot-key-client = { path = "../key/aziot-key-client" }
aziot-key-client-async = { path = "../key/aziot-key-client-async" }
aziot-key-common-http = { path = "../key/aziot-key-common-http" }
aziot-keyd-config = { path = "../key/aziot-keyd-config" }
aziot-key-openssl-engine = { path = "../key/aziot-key-openssl-engine" }
aziot-keys-common = { path = "../key/aziot-keys-common" }
aziot-tpmd-config = { path = "../tpm/aziot-tpmd-config" }
aziotctl-common = { path = "./aziotctl-common" }
config-common = { path = "../config-common" }
http-common = { path = "../http-common" }
mini-sntp = { path = "../mini-sntp" }
openssl2 = { path = "../openssl2" }
openssl-sys2 = { path = "../openssl-sys2" }

[dev-dependencies]
bytes = "1"
