[package]
name = "aziotctl"
version = "1.5.6"
authors = ["Azure IoT Edge Devs"]
edition = "2024"
homepage = "https://azure.github.io/iot-identity-service/"
description = "aziotctl is used to manage the IoT Identity Service and related services."
license = "MIT"


[dependencies]
anyhow = { workspace = true }
async-recursion = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
byte-unit = { workspace = true }
chrono = { workspace = true }
colored = { workspace = true }
erased-serde = { workspace = true }
foreign-types-shared = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
nix = { workspace = true, features = [
	"user",
] }
log = { workspace = true }
openssl = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tower-service = { workspace = true }
url = { workspace = true }

aziot-cert-client-async = { path = "../cert/aziot-cert-client-async" }
aziot-cert-common-http = { path = "../cert/aziot-cert-common-http" }
aziot-certd-config = { path = "../cert/aziot-certd-config" }
aziot-identity-client-async = { path = "../identity/aziot-identity-client-async" }
aziot-identity-common-http = { path = "../identity/aziot-identity-common-http" }
aziot-identityd-config = { path = "../identity/aziot-identityd-config" }
aziot-key-client = { path = "../key/aziot-key-client" }
aziot-key-client-async = { path = "../key/aziot-key-client-async" }
aziot-key-common-http = { path = "../key/aziot-key-common-http" }
aziot-keyd-config = { path = "../key/aziot-keyd-config" }
aziot-key-openssl-engine = { path = "../key/aziot-key-openssl-engine" }
aziot-keys-common = { path = "../key/aziot-keys-common" }
aziot-tpmd-config = { path = "../tpm/aziot-tpmd-config" }
aziotctl-common = { path = "./aziotctl-common" }
config-common = { path = "../config-common" }
http-common = { path = "../http-common" }
mini-sntp = { path = "../mini-sntp" }
openssl2 = { path = "../openssl2" }
openssl-sys2 = { path = "../openssl-sys2" }


[dev-dependencies]
bytes = { workspace = true }


[features]
snapctl = ["aziotctl-common/snapctl"]


[lints]
workspace = true
