[package]
name = "aziotd"
version = "1.4.5"
authors = ["Azure IoT Edge Devs"]
edition = "2021"
homepage = "https://azure.github.io/iot-identity-service/"
description = "aziotd is the main binary for the IoT Identity Service and related services."
license = "MIT"

[dependencies]
backtrace = "0.3"
hyper = "0.14"
log = "0.4"
serde = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }

aziot-certd = { path = "../cert/aziot-certd" }
aziot-identityd = { path = "../identity/aziot-identityd" }
aziot-keyd = { path = "../key/aziot-keyd" }
aziot-tpmd = { path = "../tpm/aziot-tpmd" }
config-common = { path = "../config-common" }
http-common = { path = "../http-common" }
logger = { path = "../logger" }
