[package]
name = "aziotd"
version = "1.5.6"
authors = ["Azure IoT Edge Devs"]
edition = "2024"
homepage = "https://azure.github.io/iot-identity-service/"
description = "aziotd is the main binary for the IoT Identity Service and related services."
license = "MIT"


[dependencies]
backtrace = { workspace = true }
bytes = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

aziot-certd = { path = "../cert/aziot-certd" }
aziot-identityd = { path = "../identity/aziot-identityd" }
aziot-keyd = { path = "../key/aziot-keyd" }
aziot-tpmd = { path = "../tpm/aziot-tpmd" }
config-common = { path = "../config-common" }
http-common = { path = "../http-common" }
logger = { path = "../logger" }


[lints]
workspace = true
