[package]
name = "config-common"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2018"


[dependencies]
async-trait = { version = "0.1", optional = true }
futures-util = { version = "0.3", optional = true }
log = { version = "0.4", optional = true }
notify = { version = "4", optional = true }
serde = "1"
tokio = { version = "1", features = ["rt", "sync"], optional = true }
toml = "0.5"


[features]
watcher = ["async-trait", "futures-util", "log", "notify", "tokio"]
