[package]
name = "config-common"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2021"


[dependencies]
async-trait = { version = "0.1", optional = true }
log = { version = "0.4", optional = true }
notify = { version = "4", optional = true }
serde = "1"
tokio = { version = "1", features = ["parking_lot", "rt", "sync"], optional = true }
toml = "0.7"


[features]
watcher = ["async-trait", "log", "notify", "tokio"]
