[package]
name = "config-common"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2024"


[dependencies]
async-trait = { workspace = true, optional = true }
log = { workspace = true, optional = true }
notify-debouncer-mini = { workspace = true, optional = true }
serde = { workspace = true }
tokio = { workspace = true, optional = true }
toml = { workspace = true }


[features]
watcher = ["async-trait", "log", "notify-debouncer-mini", "tokio"]


[lints]
workspace = true
