[package]
name = "cs-client-async"
version = "0.1.0"
authors = ["Arnav Singh <arsing@microsoft.com>"]
edition = "2018"

[dependencies]
http = "0.2"
hyper = { version = "0.13", features = ["stream"] }
percent-encoding = "2"
serde = "1"
serde_json = "1"

cs-common-http = { path = "../cs-common-http" }
http-common = { path = "../http-common" }
ks-common = { path = "../ks-common" }
