[package]
name = "csd"
version = "0.1.0"
authors = ["Arnav Singh <arsing@microsoft.com>"]
edition = "2018"

[dependencies]
backtrace = "0.3"
futures-util = { version = "0.3", features = [] }
hex = "0.4"
http = "0.2"
hyper = "0.13"
lazy_static = "1"
openssl = "0.10"
percent-encoding = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "0.2", features = ["macros"] }

cs-common-http = { path = "../cs-common-http" }
ks-client = { path = "../ks-client" }
ks-common = { path = "../ks-common" }
openssl2 = { path = "../../openssl-pkcs11-demo/openssl2" }
openssl-engine-ks = { path = "../openssl-engine-ks" }
