[package]
name = "http-common"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2021"

[dependencies]
async-trait = "0.1"
base64 = "0.21"
futures-util = "0.3"
headers = { version = "0.3" }
http = "0.2"
hyper = { version = "0.14", features = ["client", "http1", "http2", "server", "stream", "tcp"] }
hyper-openssl = { version = "0.9" }
hyper-proxy = { version = "0.9", features = ["openssl-tls"], default-features = false }
libc = "0.2"
log = "0.4"
nix = "0.24"
openssl = { version = "0.10" }
openssl-sys = { version = "0.9" }
percent-encoding = "2"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync", "time"] }
tracing = { version = "0.1", features = ["log"] }
url = { version = "2", features = ["serde"] }

[dev-dependencies]
aziot-identity-common = { path = "../identity/aziot-identity-common" }
env_logger = "0.9"
serde_json = "1"
tokio = { version = "1", features = ["net", "rt", "sync", "time", "macros"] }

[features]
no-socket-throttle = []
