[package]
name = "http-common"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2024"


[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
headers = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-openssl = { workspace = true }
hyper-proxy2 = { workspace = true }
hyper-util = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
nix = { workspace = true, features = [
	"fs",
	"process",
	"socket",
] }
openssl = { workspace = true }
openssl-sys = { workspace = true }
percent-encoding = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-service = { workspace = true }
url = { workspace = true }


[dev-dependencies]
env_logger = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

aziot-identity-common = { path = "../identity/aziot-identity-common" }


[features]
no-socket-throttle = []


[lints]
workspace = true
