[package]
name = "iotedged"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2018"

[dependencies]
base64 = "0.13"
chrono = "0.4"
foreign-types-shared = "0.1"
hyper = "0.14"
hyper-openssl = "0.9"
openssl = "0.10"
percent-encoding = "2"
rand = "0.7"
serde_json = "1"
structopt = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"

http-common = { path = "../http-common" }
aziot-cert-client-async = { path = "../cert/aziot-cert-client-async" }
aziot-cert-common-http = { path = "../cert/aziot-cert-common-http" }
aziot-key-client = { path = "../key/aziot-key-client" }
aziot-key-client-async = { path = "../key/aziot-key-client-async" }
aziot-key-common = { path = "../key/aziot-key-common" }
aziot-key-common-http = { path = "../key/aziot-key-common-http" }
aziot-key-openssl-engine = { path = "../key/aziot-key-openssl-engine" }
openssl2 = { path = "../openssl2" }
openssl-sys2 = { path = "../openssl-sys2" }
