[package]
name = "ks-client-async"
version = "0.1.0"
authors = ["Arnav Singh <arsing@microsoft.com>"]
edition = "2018"

[dependencies]
http = "0.2"
hyper = "0.13"
percent-encoding = "2"
serde = "1"
serde_json = "1"

http-common = { path = "../http-common" }
ks-common = { path = "../ks-common" }
ks-common-http = { path = "../ks-common-http" }
