[package]
name = "ks-client"
version = "0.1.0"
authors = ["Arnav Singh <arsing@microsoft.com>"]
edition = "2018"

[dependencies]
base64 = "0.12"
http = "0.2"
httparse = "1"
percent-encoding = "2"
serde = "1"
serde_json = "1"

ks-common = { path = "../ks-common" }
ks-common-http = { path = "../ks-common-http" }
