[package]
name = "ksd"
version = "0.1.0"
authors = ["Arnav Singh <arsing@microsoft.com>"]
edition = "2018"

[dependencies]
backtrace = "0.3"
base64 = "0.12"
foreign-types-shared = "0.1"
futures-util = { version = "0.3", features = [] }
http = "0.2"
hyper = "0.13"
lazy_static = "1"
openssl = "0.10"
openssl-sys = "0.9"
percent-encoding = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "0.2", features = ["macros"] }

ks-common = { path = "../ks-common" }
ks-common-http = { path = "../ks-common-http" }
openssl2 = { path = "../../openssl-pkcs11-demo/openssl2" }
openssl-sys2 = { path = "../../openssl-pkcs11-demo/openssl-sys2" }
