[package]
name = "openssl-engine-ks"
version = "0.1.0"
license = "MIT"
authors = ["Arnav Singh <arsing@microsoft.com>"]
edition = "2018"
build = "build/main.rs"


[dependencies]
base64 = "0.12"
foreign-types-shared = "0.1"
openssl = "0.10"
openssl-errors = "0.1"
openssl-sys = "0.9"

ks-client = { path = "../ks-client" }
ks-common = { path = "../ks-common" }
openssl2 = { path = "../../openssl-pkcs11-demo/openssl2" }
openssl-sys2 = { path = "../../openssl-pkcs11-demo/openssl-sys2" }


[build-dependencies]
openssl-build = { path = "../../openssl-pkcs11-demo/openssl-build" }
