[package]
name = "openssl2"
version = "0.1.0"
license = "MIT"
authors = ["Azure IoT Edge Devs"]
edition = "2024"
build = "build/main.rs"


[dependencies]
foreign-types = { workspace = true }
foreign-types-shared = { workspace = true }
openssl = { workspace = true }
openssl-sys = { workspace = true }

openssl-sys2 = { path = "../openssl-sys2/" }


[build-dependencies]
openssl-build = { path = "../openssl-build/" }


[lints]
workspace = true
