[package]
name = "test-common"
version = "0.1.0"
license = "MIT"
authors = ["Azure IoT Edge Devs"]
edition = "2018"

[dependencies]
futures-core = "0.3"
futures-util = "0.3"
hyper = { version = "0.14", features = ["server"] }
openssl = "0.10"
tokio = { version = "1", features = ["net"] }
tokio-openssl = "0.6"
