[package]
name = "test-common"
version = "0.1.0"
license = "MIT"
authors = ["Azure IoT Edge Devs"]
edition = "2021"

[dependencies]
futures-core = "0.3"
hyper = { version = "0.14", features = ["server"] }
openssl = "0.10"
serde_json = "1"
tokio = { version = "1", features = ["net"] }
tokio-openssl = "0.6"

aziot-key-client = { path = "../key/aziot-key-client" }
aziot-key-common = { path = "../key/aziot-key-common" }
aziot-identity-common = { path = "../identity/aziot-identity-common" }
aziot-identity-common-http = { path = "../identity/aziot-identity-common-http" }
http-common = { path = "../http-common" }
