[package]
name = "test-common"
version = "0.1.0"
license = "MIT"
authors = ["Azure IoT Edge Devs"]
edition = "2024"


[dependencies]
futures-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
openssl = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-openssl = { workspace = true }

aziot-key-client = { path = "../key/aziot-key-client" }
aziot-key-common = { path = "../key/aziot-key-common" }
aziot-identity-common = { path = "../identity/aziot-identity-common" }
aziot-identity-common-http = { path = "../identity/aziot-identity-common-http" }
http-common = { path = "../http-common" }


[lints]
workspace = true
