[package]
name = "aziotctl-common"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2021"


[dependencies]
anyhow = "1"
base64 = "0.13"
log = "0.4"
nix = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "2"
url = { version = "2", features = ["serde"] }

aziot-certd-config = { path = "../../cert/aziot-certd-config" }
aziot-identityd-config = { path = "../../identity/aziot-identityd-config" }
aziot-keyd-config = { path = "../../key/aziot-keyd-config" }
aziot-keys-common = { path = "../../key/aziot-keys-common", features = ["serde"] }
aziot-tpmd-config = { path = "../../tpm/aziot-tpmd-config" }
cert-renewal = { path = "../../cert/cert-renewal" }
http-common = { path = "../../http-common" }

[dev-dependencies]
bytes = "1"
toml = "0.5"
