[package]
name = "aziotctl-common"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2024"


[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
log = { workspace = true }
nix = { workspace = true, features = [
	"fs",
	"hostname",
	"user",
] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
url = { workspace = true }

aziot-certd-config = { path = "../../cert/aziot-certd-config" }
aziot-identityd-config = { path = "../../identity/aziot-identityd-config" }
aziot-keyd-config = { path = "../../key/aziot-keyd-config" }
aziot-keys-common = { path = "../../key/aziot-keys-common", features = ["serde"] }
aziot-tpmd-config = { path = "../../tpm/aziot-tpmd-config" }
cert-renewal = { path = "../../cert/cert-renewal" }
http-common = { path = "../../http-common" }


[dev-dependencies]
bytes = { workspace = true }
toml = { workspace = true }


[features]
snapctl = []


[lints]
workspace = true
