[package]
name = "aziot-cert-client-async"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2018"

[dependencies]
http = "0.2"
hyper = "0.14"
percent-encoding = "2"

aziot-cert-common-http = { path = "../aziot-cert-common-http" }
aziot-key-common = { path = "../../key/aziot-key-common" }
http-common = { path = "../../http-common", features = ["tokio1"] }
