[package]
name = "aziot-cert-client-async"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2024"


[dependencies]
hyper = { workspace = true }
percent-encoding = { workspace = true }

aziot-cert-common-http = { path = "../aziot-cert-common-http" }
aziot-key-common = { path = "../../key/aziot-key-common" }
http-common = { path = "../../http-common" }


[lints]
workspace = true
