[package]
name = "aziot-certd-config"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2018"


[dependencies]
hex = "0.4"
libc = "0.2"
openssl = "0.10"
serde = { version = "1", features = ["derive"] }
serde_with = "1"
url = { version = "2", features = ["serde"] }

http-common = { path = "../../http-common", features = [ "tokio1" ] }

[dev-dependencies]
toml = "0.5"
