[package]
name = "aziot-certd-config"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2021"


[dependencies]
hex = "0.4"
libc = "0.2"
openssl = "0.10"
serde = { version = "1", features = ["derive"] }
serde_with = "2"
url = { version = "2", features = ["serde"] }

cert-renewal = { path = "../cert-renewal" }
http-common = { path = "../../http-common" }

[dev-dependencies]
toml = "0.5"
