[package]
name = "aziot-certd-config"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2024"


[dependencies]
hex = { workspace = true }
libc = { workspace = true }
openssl = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
url = { workspace = true }

cert-renewal = { path = "../cert-renewal" }
http-common = { path = "../../http-common" }


[dev-dependencies]
toml = { workspace = true }


[lints]
workspace = true
