[package]
name = "aziot-certd"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2021"
build = "build/main.rs"


[dependencies]
async-recursion = "0.3"
async-trait = "0.1"
base64 = "0.13"
foreign-types-shared = "0.1"
futures-util = "0.3"
hex = "0.4"
http = "0.2"
hyper = "0.14"
hyper-openssl = "0.9"
lazy_static = "1"
libc = "0.2"
log = "0.4"
openssl = "0.10"
openssl-sys = "0.9"
percent-encoding = "2"
regex = "1"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "time"] }
url = "2"
wildmatch = "1"

aziot-cert-common-http = { path = "../aziot-cert-common-http" }
aziot-certd-config = { path = "../aziot-certd-config" }
aziot-key-client = { path = "../../key/aziot-key-client" }
aziot-key-client-async = { path = "../../key/aziot-key-client-async" }
aziot-key-common = { path = "../../key/aziot-key-common" }
aziot-key-common-http = { path = "../../key/aziot-key-common-http" }
aziot-key-openssl-engine = { path = "../../key/aziot-key-openssl-engine" }
aziot-identity-client-async = { path = "../../identity/aziot-identity-client-async" }
aziot-identity-common-http = { path = "../../identity/aziot-identity-common-http" }
aziot-identity-common = { path = "../../identity/aziot-identity-common" }
config-common = { path = "../../config-common", features = ["watcher"] }
http-common = { path = "../../http-common" }
openssl2 = { path = "../../openssl2" }

[build-dependencies]
openssl-build = { path = "../../openssl-build/" }

[dev-dependencies]
test-common = { path = "../../test-common" }
