[package]
name = "aziot-certd"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2024"


[dependencies]
async-recursion = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
foreign-types-shared = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-openssl = { workspace = true }
hyper-util = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
openssl = { workspace = true }
openssl-sys = { workspace = true }
percent-encoding = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
wildmatch = { workspace = true }

aziot-cert-common-http = { path = "../aziot-cert-common-http" }
aziot-certd-config = { path = "../aziot-certd-config" }
aziot-key-client = { path = "../../key/aziot-key-client" }
aziot-key-client-async = { path = "../../key/aziot-key-client-async" }
aziot-key-common = { path = "../../key/aziot-key-common" }
aziot-key-common-http = { path = "../../key/aziot-key-common-http" }
aziot-key-openssl-engine = { path = "../../key/aziot-key-openssl-engine" }
cert-renewal = { path = "../cert-renewal" }
config-common = { path = "../../config-common", features = ["watcher"] }
http-common = { path = "../../http-common" }
openssl2 = { path = "../../openssl2" }


[lints]
workspace = true
