[package]
name = "cert-renewal"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
futures-util = "0.3"
log = "0.4"
openssl = "0.10"
serde = "1"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }

aziot-cert-client-async = { path = "../aziot-cert-client-async" }
aziot-key-client-async = { path = "../../key/aziot-key-client-async" }

[dev-dependencies]
serial_test = "0.8"
toml = "0.5"

test-common = { path = "../../test-common" }
