[package]
name = "cert-renewal"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
futures-util = "0.3"
log = "0.4"
openssl = "0.10"
serde = "1"
tokio = { version = "1", features = ["macros", "parking_lot", "rt", "sync", "time"] }

[dev-dependencies]
serial_test = "1"
toml = "0.7"

test-common = { path = "../../test-common" }
