[package]
name = "cert-renewal"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2024"


[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
openssl = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }


[dev-dependencies]
serial_test = { workspace = true }
toml = { workspace = true }

test-common = { path = "../../test-common" }


[lints]
workspace = true
