[package]
name = "aziot-common"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false
description = """
The common code used for Identity Service, Key Service and Certificate Service.
"""
edition = "2018"

[dependencies]
base64 = "0.12"
env_logger = "0.7"
log = "0.4"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
url = { version = "2.0", features = ["serde"] }
